# internal/models/models.go
@@ -1,0 +1,7 @@
+package models
+
+type Testing struct {
+	ID int `"json:"id"`
+	Username string `"json:username"`
+	Email string `"json:email"`
+}
